MJ 28/08/05
- Fixed a bug in Scheduler: now all times are realy long
- Also longified the Transport interface
- Added transport to FastConfig

MJ 21/08/05
- some minor documentation fixes
- CDScheduler can now accept a list of protocols instead of only one

MJ 19/08/05
- Implemented the Tarjan algorithm to detect the strongly connected components
  in GraphAlgorithms. ConnectivityObserver now has a "type" parameter that
  can be set to "scc" to get strongly connected components. Note that for
  large diameter, large strongly connected components we can get stack
  overflows because the implementation is recursive: it should be fixed soon!
  But until then better than nothing...

MJ 16/08/05
- minor fixes in the documentation
- WireFromFile now extends WireGraph

MJ 15/08/05
- Added MethodInvoker, a Control that can invoke a "void method()" type of
  method
- Some minor cleanup on error message printing

MJ 10/08/05
I added a number of changes, some of them will break existing config files:
- Refactoring the Wire* controls. They have a common superclass now and
  the NodeInitializer implementations were separated into separate classes
  (RandNI and StarNI).
- The Wire* classes now have a public Graph field that can be used to
  initialize arbitrary graphs (see classdocs of WireGraph).
- In all classes that used it, now "undir" and "undirected" are both
  accepted as equivalent parameters.
- RENAMED A VERY POPULAR CLASS: now WireRegularRandom is WireKOut, which
  is the correct name for it. In the past it caused lots of confusion, we
  finally got rid of the bogous name.
- RENAMED VERY POPULAR PARAMETERS: instead of "degree", now every class
  uses "k".

MJ 06/08/05
- The endtime parameter's semantics slightly changed: now the interval
  ov valid times is from zero to endtime, _exclusive_ the endtime.
- Refactored the cycle based protocol support in the event driven
  engine. Now we have a Control (and also NodeInitializer): CDScheduler